<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo_Quotation</string>
    <string name="image_description">(image)</string>
    <string name="menu_title">Famous People</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="quiz_question">Who said this?</string>
    <string name="quiz_question_swipe_for_hint">(swipe for hint)</string>
    <string name="quiz_question_no_hints">(sorry no hints)</string>
    <string name="results_title">Thank You</string>
    <string name="correct_title">Correct!</string>
    <string name="incorrect_title">Sorry!</string>
    <string name="continue_string">Continue</string>
    <string name="try_again">Try again</string>
    <string name="correct_label">Correct:</string>
    <string name="incorrect_label">Incorrect:</string>
    <string name="number_of_hints_label">Number of hints:</string>
    <string name="elapsed_time_label">Elapsed time:</string>

    <!-- QUIZ LENGTH PREFERENCES -->
    <string name="pref_quiz_length_title">Quiz Length</string>
    <string name="pref_quiz_length_key">questions</string>
    <string name="pref_quiz_length_summary">Select the number of questions in a quiz</string>

    <string-array name="pref_quiz_length_entries">
        <item>"1"</item>
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"20"</item>
    </string-array>
    <string-array name="pref_quiz_length_values">
        <item>"1"</item>
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"20"</item>
    </string-array>

    <!-- QUIZ HINTS PREFERENCES -->
    <string name="pref_quiz_hints_title">Quiz Hints</string>
    <string name="pref_quiz_hints_key">hints</string>
    <string name="pref_quiz_hints_summary">Allow hints during a quiz</string>

    <!-- QUIZ VIBRATION PREFERENCES -->
    <string name="pref_quiz_vibrate_title">Quiz Vibration</string>
    <string name="pref_quiz_vibrate_key">vibration</string>
    <string name="pref_quiz_vibrate_summary">Vibrate when the user chooses a wrong answer</string>
    
    <!-- QUIZ AUDIO PREFERENCES -->
    <string name="pref_quiz_audio_title">Quiz Audio</string>
    <string name="pref_quiz_audio_key">audio</string>
    <string name="pref_quiz_audio_summary">Include audio feedback during quiz</string>
    
</resources>
